# octo-monitor-cpp

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: mac.yml
config/: symbols
include/octo-monitor-cpp/: monitor-controller.hpp
include/octo-monitor-cpp/comm/: monitor-client.hpp  monitor-event.hpp
include/octo-monitor-cpp/comm/clients/: monitor-uds-client.hpp
include/octo-monitor-cpp/preloader/: monitor-preloader.h
include/octo-monitor-cpp/preloader/wrappers/: monitor-serializer.h  monitor-wrapper.h
include/octo-monitor-cpp/produce/: monitor-producer.hpp
include/octo-monitor-cpp/produce/producers/: monitor-comm-client-producer.hpp  monitor-file-producer.hpp
src/: monitor-controller.cpp
src/comm/: monitor-client.cpp  monitor-event.cpp
src/comm/clients/: monitor-uds-client.cpp
src/preloader/: monitor-preloader.cpp
src/preloader/wrappers/: monitor-serializer.c  monitor-wrapper-access.c  monitor-wrapper-exec.c  monitor-wrapper-io.c  monitor-wrapper-open.c  monitor-wrapper-socket.c  monitor-wrapper-stat.c  monitor-wrapper.c
src/produce/producers/: monitor-comm-client-producer.cpp  monitor-file-producer.cpp
